--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </p>
 
     <p class="font-weight-light">
-      Check out the menu to learn more about my research activity and my last posts. Discover my publicly available modeling projects on <a href="https://github.com/charlesrocabert" target="_blank">GitHub</a>.
+      Check out the menu to learn more about my <a href="/research/" target="_blank">research activity</a> and my last posts. Discover my publicly available modeling projects on <a href="https://github.com/charlesrocabert" target="_blank">GitHub</a>.
     </p>
 
     <div class="row">
