Updated color scheme

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
 		font-weight: normal;
 	}
 	.active a {
-		color: rgb(104,179,219) !important;
+		color: rgb(16,103,211) !important;
 		font-weight: bold;
 		border-bottom: 5px solid !important;
-		border-bottom-color: rgb(104,179,219);
+		border-bottom-color: rgb(16,103,211);
 	}
 	.btn-outline-info {
 		background-color: white;
-		border-color: rgb(104,179,219);
-		color: rgb(104,179,219);
+		border-color: rgb(16,103,211);
+		color: rgb(16,103,211);
 	}
   .btn-outline-info:hover {
-		background-color: rgb(104,179,219);
-		border-color: rgb(104,179,219);
+		background-color: rgb(16,103,211);
+		border-color: rgb(16,103,211);
 		color: white;
 	}
 	.dropcap {
@@ -110,16 +110,16 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item" style="margin-right:10px;">
-        <a href="https://github.com/charlesrocabert" target="_blank" class="text-secondary"><i class="fab fa-github fa-2x"></i></a>&nbsp;&nbsp;
+        <a href="https://github.com/charlesrocabert" target="_blank" class="text-dark"><i class="fab fa-github fa-2x"></i></a>&nbsp;&nbsp;
       </li>
       <li class="nav-item" style="margin-right:10px;">
-        <a href="https://www.researchgate.net/profile/Charles_Rocabert" target="_blank" class="text-secondary"><i class="fab fa-researchgate fa-2x"></i></a>&nbsp;&nbsp;
+        <a href="https://www.researchgate.net/profile/Charles_Rocabert" target="_blank" class="text-dark"><i class="fab fa-researchgate fa-2x"></i></a>&nbsp;&nbsp;
       </li>
       <li class="nav-item" style="margin-right:10px;">
-        <a href="https://www.linkedin.com/in/charles-rocabert/" target="_blank" class="text-secondary"><i class="fab fa-linkedin-in fa-2x"></i></a>&nbsp;&nbsp;
+        <a href="https://www.linkedin.com/in/charles-rocabert/" target="_blank" class="text-dark"><i class="fab fa-linkedin-in fa-2x"></i></a>&nbsp;&nbsp;
       </li>
       <li class="nav-item" style="margin-right:10px;">
-        <a href="mailto:charles [DOT] rocabert [AT] gmail [DOT] com" target="_blank" class="text-secondary"><i class="fas fa-envelope fa-2x"></i></a>
+        <a href="mailto:charles [DOT] rocabert [AT] gmail [DOT] com" target="_blank" class="text-dark"><i class="fas fa-envelope fa-2x"></i></a>
       </li>
     </ul>
   </div>
