--- a/publications/index.html
+++ b/publications/index.html
@@ -4,6 +4,15 @@
 
 <head>
 	
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6ZM4ZQXFPR"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-6ZM4ZQXFPR');
+	</script>
+	
 	<title>Charles Rocabert | Publications</title>
 	
 	
@@ -13,15 +22,6 @@
 	
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-	
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6ZM4ZQXFPR"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-
-		gtag('config', 'G-6ZM4ZQXFPR');
-	</script>
 	<style>
 	html {
 		font-size: 1rem;
@@ -31,19 +31,19 @@
 		font-weight: normal;
 	}
 	.active a {
-		color: rgb(16,103,211) !important;
+		color: rgb(26,115,232) !important;
 		font-weight: bold;
 		border-bottom: 5px solid !important;
-		border-bottom-color: rgb(16,103,211);
+		border-bottom-color: rgb(26,115,232);
 	}
 	.btn-outline-info {
 		background-color: white;
-		border-color: rgb(16,103,211);
-		color: rgb(16,103,211);
+		border-color: rgb(26,115,232);
+		color: rgb(26,115,232);
 	}
   .btn-outline-info:hover {
-		background-color: rgb(16,103,211);
-		border-color: rgb(16,103,211);
+		background-color: rgb(26,115,232);
+		border-color: rgb(26,115,232);
 		color: white;
 	}
 	.dropcap {
@@ -137,7 +137,7 @@
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">Preprints</font></h5>
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
-      <span class="badge badge-pill badge-warning">2020</span> Charles Rocabert, Serge Fenet, Bernard Kaufmann, Jérôme M.W. Gippet. <strong>Integrating road network topology for modelling human-mediated dispersal in terrestrial landscapes</strong>. Under review at <em>Methods in Ecology and Evolution</em> (2020).
+      <span class="badge badge-pill badge-warning">2020</span> Charles Rocabert, Serge Fenet, Bernard Kaufmann, Jérôme M.W. Gippet. <strong>Integrating road network topology for modelling human-mediated dispersal in terrestrial landscapes</strong> (under review at <em>Methods in Ecology and Evolution</em>).
       <br/>
     </p>
 
