Updated and rebuilt content

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ if (!doNotTrack) {
         <a href="https://www.linkedin.com/in/charles-rocabert/" target="_blank" class="text-dark"><i class="fab fa-linkedin-in fa-2x"></i></a>&nbsp;&nbsp;
       </li>
       <li class="nav-item" style="margin-right:10px;">
-        <a href="mailto:charles [DOT] rocabert [AT] gmail [DOT] com" target="_blank" class="text-dark"><i class="fas fa-envelope fa-2x"></i></a>
+        <a href="mailto:charles [D] rocabert [X] gmail [D] com (replace the [] with the right characters)" target="_blank" class="text-dark"><i class="fas fa-envelope fa-2x"></i></a>
       </li>
     </ul>
   </div>
@@ -146,7 +146,7 @@ if (!doNotTrack) {
     </p>
 
     <p class="font-weight-light">
-      I am using a broad range of modeling approaches, from mathematical modeling to individual-based and multi-level simulations.
+      I am using a broad range of modeling approaches, from mathematical modeling to individual-based and multi-scale simulations.
 
       Depending on their complexity, I usually consider models as experimental systems (<a href="https://doi.org/10.1016/j.tree.2004.07.019" target="_blank">Peck, 2004</a>) &mdash; I conduct <em>in silico</em> evolution experiments in a computer as one would do in the real world (<a href="https://doi.org/10.1038/nrmicro2750" target="_blank">Hindré et al., 2012</a>).
     </p>
@@ -186,7 +186,7 @@ if (!doNotTrack) {
 
 <div class="row">
   <div class="col text-center border-top">
-    <small class="text-muted"> &copy; 2020 Charles Rocabert. All rights reserved. Powered by Hugo and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
+    <small class="text-muted"> &copy; 2020-2021 Charles Rocabert. All rights reserved. Powered by Hugo and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
   </div>
 </div>
 
