--- a/research/index.html
+++ b/research/index.html
@@ -123,7 +123,7 @@ if (!doNotTrack) {
         <a href="https://www.linkedin.com/in/charles-rocabert/" target="_blank" class="text-dark"><i class="fab fa-linkedin-in fa-2x"></i></a>&nbsp;&nbsp;
       </li>
       <li class="nav-item" style="margin-right:10px;">
-        <a href="mailto:charles [DOT] rocabert [AT] gmail [DOT] com" target="_blank" class="text-dark"><i class="fas fa-envelope fa-2x"></i></a>
+        <a href="mailto:charles [D] rocabert [X] gmail [D] com (replace the [] with the right characters)" target="_blank" class="text-dark"><i class="fas fa-envelope fa-2x"></i></a>
       </li>
     </ul>
   </div>
@@ -154,9 +154,9 @@ if (!doNotTrack) {
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title"><i class="fas fa-caret-down"></i> Impact of an evolvable phenotypic noise on the adaptation rate of complex organisms</h5>
-              <p class="card-text text-justify font-weight-light">How does an evolvable phenotypic noise (the variability of isogenic populations in constant environment) impact the probability to fix beneficial mutations? How do the shape of the fitness landscape and the complexity of the phenotype relate to this mechanism? I asked these questions in <a href="https://doi.org/10.1111/evo.14083" target="_blank">this publication</a>, where I show that phenotypic noise promotes the fixation of beneficial mutations on plateauing regions of the fitness lanscape, and compensates for the cost of complexity.</p>
-              <p class="card-text text-justify font-weight-light">This work is a first step in what I consider to be a long-term project, raising many questions, <em>e.g.</em> in predictive evolution, in cancer drug resistance, or in cell differenciation.
-              I am always happy to <a href="mailto:charles [DOT] rocabert [AT] gmail [DOT] com" target="_blank">discuss and share ideas</a> on this topic.</p>
+              <p class="card-text text-justify font-weight-light">How does an evolvable phenotypic noise (the variability of isogenic populations in constant environment) impact the probability to fix beneficial mutations? How do the shape of the fitness landscape and the complexity of the phenotype relate to this mechanism? I asked these questions in <a href="https://doi.org/10.1111/evo.14083" target="_blank">this publication</a>, where I show that phenotypic noise promotes the fixation of beneficial mutations on plateauing regions of the fitness landscape, and compensates for the cost of complexity.</p>
+              <p class="card-text text-justify font-weight-light">This publication is a first step in a long-term project, raising many questions, <em>e.g.</em> in predictive evolution, in cancer drug resistance, or in cell differenciation.
+              I am always happy to <a href="mailto:charles [D] rocabert [X] gmail [D] com (replace the [] with the right characters)" target="_blank">discuss and share ideas</a> on this topic.</p>
               <p class="card-text text-justify font-weight-light">For a shorter take-home message, check out this <a data-toggle="collapse" href="#collapse" aria-expanded="false" aria-controls="collapse">drawing</a> by P. Biller.</p>
               <div class="collapse" id="collapse">
                   <img src="../img/a_long_time_ago.png" alt="A long time ago..." class="img-fluid">
@@ -186,7 +186,7 @@ if (!doNotTrack) {
             <div class="card-body">
               <h5 class="card-title"><i class="fas fa-caret-down"></i> Determinants of the conservation of metabolite levels between mammalian species</h5>
               <p class="card-text text-justify font-weight-light">Traditionally, metabolic evolution has been primarily studied by comparing enzyme content and pathway structure across species. Recent progress in metabolomics technology allows the systematic quantification of metabolite concentrations, the metabolome, offering a new perspective to interrogate the evolution of metabolic systems.</p>
-              <p class="card-text text-justify font-weight-light">Within this collaborative project, I explored the evolving properties of curated kinetic models of mammalian metabolism using computer simulations. I developed <a href="https://github.com/charlesrocabert/MetEvolSim" target="_blank">MetEvolSim</a> (Metabolome Evolution Simulator), a modeling framework publicly available as a user friendly <a href="https://pypi.org/project/MetEvolSim/" target="_blank">Python package</a>. I have shown that abundant metabolites are more coupled to fitness, and are therefore more conserved through evolutionary times (one manuscript in preparation). I am currently questionning these results using a thermodynamics-based flux analysis approach.</p>
+              <p class="card-text text-justify font-weight-light">Within this interdisciplinary project, I explored the evolving properties of kinetic models of mammalian metabolism using computer simulations. I developed <a href="https://github.com/charlesrocabert/MetEvolSim" target="_blank">MetEvolSim</a> (Metabolome Evolution Simulator), a modeling framework publicly available as a user friendly <a href="https://pypi.org/project/MetEvolSim/" target="_blank">Python package</a>. I have shown that abundant metabolites are more coupled to fitness, and are therefore more conserved through evolution (one manuscript in preparation). I am currently questionning these results using a thermodynamics-based flux analysis approach.</p>
               <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Gábor Boross, Orsolya Liska, Balázs Papp.</p>
             </div>
           </div>
@@ -245,12 +245,12 @@ if (!doNotTrack) {
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title"><i class="fas fa-caret-down"></i> Modeling the evolution of bacterial micro-organisms with numerical simulations</h5>
-              <p class="card-text text-justify font-weight-light">Evolution is the major source of complexity on Earth, at the origin of all the species we can observe, interact with or breed. On a smaller scale, evolution is at the heart of the adaptation process for many species, in particular micro-organisms (<em>e.g.</em> bacteria, viruses...). These organisms are not only organized by evolution, they are also organized to evolve (hence the concept of <a href="https://evoevo.liris.cnrs.fr/what-is-evoevo/" target="_blank">evolution of evolution</a>).</p>
+              <p class="card-text text-justify font-weight-light">Evolution is the major source of complexity on Earth, at the origin of all the species we can observe, interact with or breed. On a smaller scale, evolution is at the heart of the adaptation process for many species, in particular micro-organisms (<em>e.g.</em> bacteria, viruses...). These organisms are not only organized by evolution, they are also organized to evolve (<em>i.e.</em> "<a href="https://evoevo.liris.cnrs.fr/what-is-evoevo/" target="_blank">evolution evolves</a>").</p>
 
               <p class="card-text text-justify font-weight-light">During my PhD, I joined the <a href="https://evoevo.liris.cnrs.fr/" target="_blank">EvoEvo European project</a> to create an integrated computational model of evolution. I developed <a href="https://github.com/charlesrocabert/Evo2Sim" target="_blank">Evo<sup>2</sup>Sim</a> (Evolution of Evolution Simulator), a multi-scale evolutionary model which takes into account the (ultra-fast) dynamics of metabolic networks, the (fast) dynamics of gene regulatory networks, the (medium to slow) dynamics of resources in the ecosystem and the (slow) evolutionary dynamics of genes and genome structure. Evo<sup>2</sup>Sim is designed to perform <em>in silico</em> experimental evolution experiments, that mimick real experimental evolution protocols. A detailed description of the model and its background can be found in my <a href="https://github.com/charlesrocabert/Thesis/blob/master/phd_manuscript.pdf
   " target="_blank">PhD manuscript</a>.</p>
 
-              <p class="card-text text-justify font-weight-light">Using this model, I have contributed to understand why stable diversification events by cross-feeding emerge in the Lenski's <em>E. coli</em> long term evolution experiment (<a href="http://myxo.css.msu.edu/ecoli/" target="_blank">LTEE</a>), due to the seasonality introduced by the daily tranfers (see <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005459" target="_blank">my publication in PLoS Computational Biology</a>).</p>
+              <p class="card-text text-justify font-weight-light">Using this model, I have contributed to understand why stable diversification events by cross-feeding emerge in Lenski's <em>E. coli</em> long term evolution experiment (<a href="http://myxo.css.msu.edu/ecoli/" target="_blank">LTEE</a>), due to the seasonality introduced by the daily tranfers (see <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005459" target="_blank">my publication in PLoS Computational Biology</a>).</p>
 
               <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Guillaume Beslon, Jessika Consuegra, Carole Knibbe, Dominique Schneider.</p>
             </div>
@@ -266,7 +266,7 @@ if (!doNotTrack) {
 
 <div class="row">
   <div class="col text-center border-top">
-    <small class="text-muted"> &copy; 2020 Charles Rocabert. All rights reserved. Powered by Hugo and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
+    <small class="text-muted"> &copy; 2020-2021 Charles Rocabert. All rights reserved. Powered by Hugo and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
   </div>
 </div>
 
