--- a/research/index.html
+++ b/research/index.html
@@ -184,7 +184,7 @@ if (!doNotTrack) {
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title"><i class="fas fa-caret-down"></i> Determinants of the conservation of metabolite levels between mammalian species</h5>
+              <h5 class="card-title"><i class="fas fa-caret-down"></i> Modeling the principles behind metabolome conservation in mammals</h5>
               <p class="card-text text-justify font-weight-light">Traditionally, metabolic evolution has been primarily studied by comparing enzyme content and pathway structure across species. Recent progress in metabolomics technology allows the systematic quantification of metabolite concentrations, the metabolome, offering a new perspective to interrogate the evolution of metabolic systems.</p>
               <p class="card-text text-justify font-weight-light">Within this interdisciplinary project, I explored the evolving properties of kinetic models of mammalian metabolism using computer simulations. I developed <a href="https://github.com/charlesrocabert/MetEvolSim" target="_blank">MetEvolSim</a> (Metabolome Evolution Simulator), a modeling framework publicly available as a user friendly <a href="https://pypi.org/project/MetEvolSim/" target="_blank">Python package</a>. I have shown that abundant metabolites are more coupled to fitness, and are therefore more conserved through evolution (one manuscript in preparation). I am currently questionning these results using a thermodynamics-based flux analysis approach.</p>
               <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Gábor Boross, Orsolya Liska, Balázs Papp.</p>
