--- a/software/index.html
+++ b/software/index.html
@@ -3,6 +3,14 @@
 <html lang="en">
 
 <head>
+  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R5FPWGD7WK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-R5FPWGD7WK');
+  </script>
 	
 	<title>Charles Rocabert | Software</title>
 	
