--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	
 	<title>Charles Rocabert | Home</title>
 	
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png">
 	
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -151,7 +154,7 @@
   <div class="col-md-8 text-justify">
     <h4 class="text-secondary font-weight-light">ABOUT ME</h4>
     <p class="font-weight-light">
-      <span class="dropcap">H</span>i there! I am an evolutionary biologist, who uses computer simulations and mathematics to explore the evolution of complex biological systems. I am studying how evolution and second-order selection shape genotypes, phenotypes and populations in variable environments, with its share of surprising and counter-intuitive effects.
+      <span class="dropcap">H</span>i there! I am an evolutionary biologist, who uses computer simulations and mathematics to explore the evolution of complex biological systems. I am studying how evolution and second-order selection shape genotypes, phenotypes and populations in variable environments, with their share of surprising and counter-intuitive effects.
     </p>
 
     <p class="font-weight-light">
