--- a/research/index.html
+++ b/research/index.html
@@ -14,6 +14,9 @@
 	
 	<title>Charles Rocabert | Research</title>
 	
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png">
 	
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -144,7 +147,35 @@
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
-              <img src="../img/project1.png" alt="Project 1" width=200px class="img-fluid">
+              <img src="../img/project1.png" alt="Project 1" width=120px class="img-fluid">
+              <br /><br />
+              <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
+
+              </div>
+              <br/><br/>
+              <h5><span class="badge badge-pill badge-success">ongoing project</span><br/></h5>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title"><i class="fas fa-caret-down"></i> Deciphering the genetic architecture of polygenic adaptation in <em>Tribolium castaneum</em></h5>
+                <p class="card-text text-justify font-weight-light">Most adaptation processes have a polygenic genetic basis. Characterizing the dynamics of polygenic adaptation in evolving populations and their underlying genetic architecture is difficult, and requires the development of new experimental approaches and statistical methods. In particular, the detection of genetic markers associated to polygenic traits is challenging, as weak but meaningful variations of allelic frequencies are often under the barrier of statistical detection, in addition to linkage desequilibrium and other known biases (<a href="https://doi.org/10.1146/annurev-genom-083115-022316" target="_blank">Sella & Barton, 2019</a>).</p>
+                <p class="card-text text-justify font-weight-light">In this context, experimental evolution is a promising tool. By creating the conditions of polygenic adaptation in a controlled environment, this approach allows to characterize the adaptive dynamics at all the levels of the genotype-to-phenotype map (genome sequencing, gene expression, phenotype, fitness) at an individual level.</p>
+                <p class="card-text text-justify font-weight-light">During this project, I will use the data collected during an experimental evolution with <em>Tribolium castaneum</em> (see <em>e.g.</em> <a href="https://doi.org/10.1371/journal.pgen.1008768" target="_blank">Koch & Guillaume, 2020</a>) to decipher the genetic architecture of polygenic adaptation. Combined with numerical simulations and the development of new detection methodologies, the objectives of this project is to better understand the adaptation of populations to environmental change, as well as offering new methods to detect genetic markers of adaptation.</p>
+                <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Frédéric Guillaume.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Research topic 2 -->
+    <div class="row justify-content-center mt-4">
+      <div class="col-lg-11">
+        <div class="shadow-sm card border-muted">
+          <div class="row no-gutters">
+            <div class="col-md-4 p-4 text-center">
+              <img src="../img/project2.png" alt="Project 2" width=200px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
               <a href="https://github.com/charlesrocabert/MetEvolSim" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> MetEvolSim repository</a>
@@ -166,13 +197,13 @@
       </div>
     </div>
 
-    <!-- Research topic 2 -->
+    <!-- Research topic 3 -->
     <div class="row justify-content-center mt-4">
       <div class="col-lg-11">
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
-              <img src="../img/project2.png" alt="Project 2" width=250px class="img-fluid">
+              <img src="../img/project3.png" alt="Project 3" width=250px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
               <a href="https://doi.org/10.1111/evo.14083" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fas fa-pen-nib"></i> Publication (Evolution, 2020)</a>
@@ -201,13 +232,13 @@
       </div>
     </div>
 
-    <!-- Research topic 3 -->
+    <!-- Research topic 4 -->
     <div class="row justify-content-center mt-4">
       <div class="col-lg-11">
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
-              <img src="../img/project3.png" alt="Project 3" width=200px class="img-fluid">
+              <img src="../img/project4.png" alt="Project 4" width=200px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
               <a href="https://github.com/charlesrocabert/MoRIS" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> MoRIS repository</a>
@@ -230,13 +261,13 @@
       </div>
     </div>
 
-    <!-- Research topic 4 -->
+    <!-- Research topic 5 -->
     <div class="row justify-content-center mt-4">
       <div class="col-lg-11">
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
-              <img src="../img/project4.png" alt="Project 4" width=250px class="img-fluid">
+              <img src="../img/project5.png" alt="Project 5" width=250px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
               <a href="https://doi.org/10.1371/journal.pcbi.1005459
