--- a/software/index.html
+++ b/software/index.html
@@ -14,6 +14,9 @@
 	
 	<title>Charles Rocabert | Software</title>
 	
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png">
 	
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -157,7 +160,7 @@
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-caret-down"></i> MetEvolSim (Metabolome Evolution Simulator)</h5>
                 <p align="center">
-                  <a href="https://pypi.python.org/pypi/MetEvolSim/" target="_blank"><img src="https://badge.fury.io/py/metevolsim.svg" /></a>&nbsp;
+                  <a href="https://badge.fury.io/py/MetEvolSim"><img src="https://badge.fury.io/py/MetEvolSim.svg" alt="PyPI version"></a>&nbsp;
                   <a href="https://github.com/charlesrocabert/MetEvolSim/actions" target="_blank"><img src="https://github.com/charlesrocabert/MetEvolSim/workflows/Upload Python Package/badge.svg" /></a>&nbsp;
                   <a href="https://github.com/charlesrocabert/MetEvolSim/LICENSE.html" target="_blank"><img src="https://img.shields.io/badge/License-GPLv3-blue.svg" /></a>
                 </p>
@@ -272,7 +275,7 @@
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-caret-down"></i> Evo<sup>2</sup>Sim (Evolution of Evolution Simulator)</h5>
                 <p align="center">
-                  <a href="https://github.com/charlesrocabert/Evo2Sim/releases/latest" target="_blank"><img src="https://img.shields.io/badge/version- 1.0.2-green.svg" /></a>&nbsp;
+                  <a href="https://github.com/charlesrocabert/Evo2Sim/releases/latest" target="_blank"><img src="https://img.shields.io/badge/version- v1.0.2-green.svg" /></a>&nbsp;
                   <a href="https://github.com/charlesrocabert/Evo2Sim/releases/latest" target="_blank"><img src="https://img.shields.io/badge/build-passing-green.svg" /></a>&nbsp;
                   <a href="https://www.gnu.org/licenses/gpl-3.0" target="_blank"><img src="https://img.shields.io/badge/license-GPL v3-blue.svg" /></a>
                 </p>
