--- a/publications/index.html
+++ b/publications/index.html
@@ -164,11 +164,11 @@
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">Journal articles</font></h5>
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
-      <span class="badge badge-pill badge-success">Accepted</span> <u>Jérôme M. W. Gippet</u>, Charles Rocabert, Théotime Colin, Julien Grangier, Hugo Tauru, Adeline Dumet, Nathalie Mondy, Bernard Kaufmann.
+      <span class="badge badge-pill badge-success">In press</span> <u>Jérôme M. W. Gippet</u>, Charles Rocabert, Théotime Colin, Julien Grangier, Hugo Tauru, Adeline Dumet, Nathalie Mondy, Bernard Kaufmann.
       <strong>The observed link between urbanization and invasion can depend on how invasion is measured</strong>. <em>Diversity and Distributions</em> (2022).
       <br/>
     </p>
-    
+
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
       <span class="badge badge-pill badge-success">2020</span> <u>Charles Rocabert</u>, Guillaume Beslon, Carole Knibbe, Samuel Bernard. <strong>Phenotypic noise and the cost of complexity</strong>. <em>Evolution</em> (2020).
       <br/>
